# vectl

./: .gitignore  CLAUDE.md  CMakeLists.txt  MANIFEST.in  Makefile  README.md  TESTSUITE.md  build.sh  buildit.sh  chunk_directory.py  ollama_vector_search.py  pyproject.toml  quick_fix.py  requirements-clean.txt  requirements.txt  setup.py  setup.py.bak  setup.sync-conflict-20250329-012019-4EJV4N3.py-bak  stress_test.py  test_binding.py  test_import.py  test_search.py  update.sh
docs/: README.md  TESTSUITE.md  batch_embed.md  ollama_vector_search.md  vector_search.md
examples/: README.md  batch_embed_files.py  enhanced_json_repair.py  extract_json_blocks.py  indxr.py  integration_with_schema_discovery.py  ollama_tool.py  ollama_vector_search.py  setup.py  test.py  test_binding.py  test_json_repair.py  test_search.py  vector_search.py
scripts/: indxr.sh  prepare_device.sh  reset_device.sh  runit.sh  vecrun.sh
src/: CMakeLists.txt  Makefile  arm64_simd.h  clustering_interface.h  corruption_test.cpp  fastcomp.cpp  kmeans_clustering.cpp  kmeans_clustering.h  linux_check.h  logger.h  python_bindings.cpp  python_bindings.cpp.bak  python_vector_store.cpp  python_vector_store.h  raw_device_test.cpp  test_cluster_store  test_cluster_store.cpp  vector_cluster_store.cpp  vector_cluster_store.h  vector_store_diagnostic.cpp  vector_store_headers.h  vector_store_repair.cpp  vector_store_test.cpp  vector_store_validate.cpp
src/vector_store/: __init__.py
test/: README.md  conftest.py  pytest.ini  test_integration.py  test_ollama_tool.py  test_tinvec.py  test_vector_store.py
tests/: __init__.py  conftest.py  test_bindings.py  test_fastcomp.py  test_search.py  test_storage.py
tinvec/: __init__.py
vector_store/: __init__.py  fastcomp.py
